Wrong selection in Dope Sheet #47472

Closed
opened 2016-02-18 15:33:23 +01:00 by pistol ioan · 21 comments

Windows 10 64bit, gtx 970

Blender 2.76b Hash: f337fea

Please consult my print screen, blend file and also a short video demonstration.
https://www.youtube.com/watch?v=evlC7En53B8&feature=youtu.be

When i try to edit an action from NLA, the selection is completely wrong sometimes.
And is very stressful to animate.

"Open the blend file, and try to select some keyframes from Dope Sheet or Action Editor.
Even with right mouse button is not working properly."

selection bug.blend

selection bug.jpg

**Windows 10 64bit, gtx 970** **Blender 2.76b Hash: f337fea** Please consult my print screen, blend file and also a short video demonstration. https://www.youtube.com/watch?v=evlC7En53B8&feature=youtu.be **When i try to edit an action from NLA, the selection is completely wrong sometimes. And is very stressful to animate.** "Open the blend file, and try to select some keyframes from Dope Sheet or Action Editor. Even with right mouse button is not working properly." [selection bug.blend](https://archive.blender.org/developer/F283707/selection_bug.blend) ![selection bug.jpg](https://archive.blender.org/developer/F283708/selection_bug.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @istoltoto

Added subscriber: @istoltoto
Author

I forgot to mention that is a Border Selection with the B button.

I forgot to mention that is a Border Selection with the B button.
Member

Added subscriber: @eroMoD

Added subscriber: @eroMoD
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
eroMoD self-assigned this 2016-02-18 17:42:15 +01:00
Member

thats not a bug, its made on purpose.

Selecting from left to right
only selects what is inside the border

Selecting from right to left will select everything plus one level up.

thats not a bug, its made on purpose. Selecting from left to right only selects what is inside the border Selecting from right to left will select everything plus one level up.
Author

lol

lol
Author

When you select something, it need to select only what you have selected, and nothing more.
Is surely a bug.

When you select something, it need to select only what you have selected, and nothing more. Is surely a bug.
Author

Have you seen the video?
Also is not only that, because some of the keyframes are selected and others are not selected. Is not a logic there.

And when you have a lot more keyframes, is a lot harder to work.

Have you seen the video? Also is not only that, because some of the keyframes are selected and others are not selected. Is not a logic there. And when you have a lot more keyframes, is a lot harder to work.
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
eroMoD reopened this issue 2016-02-18 18:31:38 +01:00
Member

oh, should have watched the last 3 seconds, when you repeat the drag from left to right the second time, it acts like dragging from right to left.

Yea developers, I think this guy has a point,
you guys are great btw.

oh, should have watched the last 3 seconds, when you repeat the drag from left to right the second time, it acts like dragging from right to left. Yea developers, I think this guy has a point, you guys are great btw.
Author

I use Blender for more than 7 years. And i love Blender, and every open movie.
I'm very hype for every feature, and news regarding to Blender.

The blender is my big hobby.
I see Ton Roosendaal like an important figure, in my heart he is like Steve Jobs for Apple.

And i agree with you, the developers are everything.

I don't wanted to be rude or something.

If you want more details about the bug, i can search for more and give you more informations, but i'm not a programmer.

Thanks,

I use Blender for more than 7 years. And i love Blender, and every open movie. I'm very hype for every feature, and news regarding to Blender. The blender is my big hobby. I see Ton Roosendaal like an important figure, in my heart he is like Steve Jobs for Apple. And i agree with you, the developers are everything. I don't wanted to be rude or something. If you want more details about the bug, i can search for more and give you more informations, but i'm not a programmer. Thanks,
eroMoD was unassigned by Brecht Van Lommel 2016-02-18 20:14:28 +01:00
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

Can you check again with the latest test builds? I did some fixes here a few weeks ago.

Can you check again with the latest test builds? I did some fixes here a few weeks ago.
Joshua Leung self-assigned this 2016-02-19 00:39:56 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Looked into this - can redo this with master (1d15421af9).
The problem seems to be that the NLA-un-mapping is only done on the bottom row of keyframes. For the summary no remapping takes place for border selection (easy to check by changing scale - see the exact location of the summary, re-enable scale, then select the empty where the key was without scale - and it becomes selected).

Looked into this - can redo this with master (1d15421af9). The problem seems to be that the NLA-un-mapping is only done on the bottom row of keyframes. For the summary no remapping takes place for border selection (easy to check by changing scale - see the exact location of the summary, re-enable scale, then select the empty where the key was without scale - and it becomes selected).
Member

Ah right... that indeed might still have been broken. Will take another look :)

Ah right... that indeed might still have been broken. Will take another look :)
Author

Any news?
Because i work on an animation, and i need to know if i will work without NLA or with NLA.

Thanks,

Any news? Because i work on an animation, and i need to know if i will work without NLA or with NLA. Thanks,

This issue was referenced by ba99e097f7

This issue was referenced by ba99e097f7cea20a2f2e027c00b0abb6df8639f8
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Hey

I have tried the last version blender-2.76-e29a5ba-win64.zip
And it seems that some part of the problem seems solved.

But when i try to select from left to right, the problem is that is selecting much more.
And according to what Mr Pavel (tostrong4you) said: "Selecting from left to right only selects what is inside the border"

Please consult my image below:

selection.jpg

Hey I have tried the last version blender-2.76-e29a5ba-win64.zip And it seems that some part of the problem seems solved. But when i try to select from left to right, the problem is that is selecting much more. And according to what Mr Pavel (tostrong4you) said: "Selecting from left to right only selects what is inside the border" Please consult my image below: ![selection.jpg](https://archive.blender.org/developer/F284171/selection.jpg)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47472
No description provided.