Fix T47472: Border select in the Action Editor does not respect NLA scaling on Summary Tracks